Connection Made. Page Layout in progress

--- a/client/style/style.css
+++ b/client/style/style.css
@@ -2,117 +2,252 @@ body {
     font-family: "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-input {
-    outline: none;
-    font-size: 1.0rem;
-    padding: 0 5px;
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.containerGame {
+    display: flex;
+    justify-content: center;
+}
+
+#div-game {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+#containerBoard {
+    flex: 1 1 auto;
+    min-width: 600px;
+    position: relative;
+    margin: 0;
+    line-height: 0;
+    content: '';
+}
+
+#containerCanvas {
+    position: relative;
+    border-radius: 2px;
+    overflow: hidden;
+    margin: auto;
+    width: 750px;
+}
+
+#overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    line-height: 1;
+    opacity: 0;
+    background: rgba(3,8,29,.8);
+    text-shadow: 0 0 3px #000;
+}
+
+#overlay .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #button-wrapper {
     position: absolute;
-    z-index: 1;
-    height: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.wrapper {
-    width:1150px;
-    margin-left:auto;
-    margin-right:auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#button-wrapper button {
+    height: 25px;
 }
 
-#div-game {
+.custom-input{
     display: inline-block;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    height: 600px;
-}
-
-#div-chat {
-    display: inline-block;
-    margin-left: 10px;
-}
-
-#wrapper button {
-    height: 20px;
-    width: 100px;
-}
-
-.chat-button {
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    padding: 3px 15px;
-    color: white;
-    line-height: 25px;
-    background-color: #00bcd4;
-    border: none;
-    border-radius: 2px;
-    cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
-    transition: all 150ms ease-in;
-    outline: none;
-}
-
-.chat-button:hover {
-    background-color: #79d7e4;
-}
-
-.chat-button.turn:hover {
-    background-color: #eaeaea;
-}
-
-ul {
-    list-style: none;
-    margin: 0;
+    width: 88%;
+    height: 70%;
+    font-family: 'Comfortaa', sans-serif;
+    top: 25px;
+    font-size: 16px;
+    border: 1px solid black;
+    transition: border-color 200ms ease-in-out;
+    background: transparent;
+    outline:none;
     padding: 0;
-    border-bottom: 1px solid lightgrey;
-    overflow-y: scroll;
+    margin: 0;
+    color: white;
+    text-decoration-color: white;
 }
 
-li {
-    padding: 10px 10px 10px 10px;
+.custom-input:focus{
+    color: white;
+    border-bottom:1px solid white;
 }
 
-canvas {
-    display: block;
-
+.online-user-wrapper {
+    flex-basis: 20%;
+    border: black 3px solid;
+    margin-right: 10px;
 }
 
-.controls-wrapper {
-    background-color: rgb(255, 255, 255);
-    width: 400px;
-    margin: 20px auto;
-    border: 1px solid lightgrey;
+/* Chat wrapper */
+button, input, select, textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
 }
 
-.chat-wrapper {
-    padding: 10px;
-}
-
-.chat-wrapper form {
+#containerSidebar {
+    position: relative;
+    margin-left: 8px;
+    width: 340px;
+    min-width: 340px;
+    flex: 0 0 auto;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.chat-wrapper form input {
-    font-size: 1.0rem;
-    margin: 0 10px 0 0;
-    padding: 0 5px;
-    flex-grow: 1;
+#boxChat, #containerChat {
+    background: #eee;
+    width: 100%;
 }
 
-.chat-wrapper form button {
-    width: 80px;
+#containerChat {
+    height: 64px;
+    padding: 4px;
+    flex: 1 0 auto;
+    border-radius: 2px;
 }
 
-#events {
-    height: 546px;
+#boxChat {
+    box-sizing: border-box;
+    height: 100%;
+}
+
+#boxMessages {
+    height: calc(100% - 34px);
+    overflow-y: auto;
+}
+
+#boxChatInput {
+    height: 34px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+/*messages style*/
+.chat-text{
+    margin: 3px;
+}
+
+.user-nickname{
+    font-weight: bold!important;
+}
+
+/*online users*/
+#containerPlayerlist {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-right: 8px;
+}
+
+#containerGamePlayers {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    width: 200px;
+}
+
+#containerGamePlayers .player {
+    position: relative;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#containerGamePlayers .player:first-child, .lobbySettings .lobbyName {
+    border-radius: 2px 2px 0 0;
+}
+
+.player:nth-child(odd) {
+    background: #eee;
+}
+
+/* Modal */
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.5);
+}
+
+/* Modal Content/Box */
+.modal-content {
+    color: white;
+    max-width: 1000px;
+    min-height: 150px;
+    background-color: transparent;
+    opacity: 2;
+    margin: 15% auto;
+    padding: 20px;
+    width: 80%;
+    text-align: center;
+}
+
+.modal-title{
+    margin: 15px 0px;
+    padding: 5px;
+}
+
+#nickname-input{
+    margin-top: 20px;
+    width: 50%;
+    text-align: center;
+    font-size: 26px;
+    border-bottom: solid 1px grey;
+    -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+    transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+    background-size: 200px 100%;
+    background: white no-repeat -200px 0;
+
+}
+
+#nickname-input:focus{
+    border-bottom: 1px solid white;
 }
