--- a/client/style/style.css
+++ b/client/style/style.css
@@ -1,8 +1,15 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Helvetica Neue", sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: #cccccc;
 }
 
 .container-fluid {
@@ -10,6 +17,29 @@ body {
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+}
+
+.container-fluid:before {
+    display: table;
+    content: " ";
+}
+
+.container-fluid:after {
+    display: table;
+    content: " ";
+}
+
+.header {
+    width: 100%;
+    min-height: 50px;
+    margin-bottom: 8px;
+}
+
+.header h2 {
+    font-size: 20px;
+    /*background: rgba(0, 0, 0, 0.1);*/
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .containerGame {
@@ -24,8 +54,8 @@ body {
 }
 
 #containerBoard {
-    flex: 1 1 auto;
-    min-width: 600px;
+    width: 750px;
+    min-width: 750px;
     position: relative;
     margin: 0;
     line-height: 0;
@@ -70,28 +100,6 @@ body {
     height: 25px;
 }
 
-.custom-input{
-    display: inline-block;
-    width: 88%;
-    height: 70%;
-    font-family: 'Comfortaa', sans-serif;
-    top: 25px;
-    font-size: 16px;
-    border: 1px solid black;
-    transition: border-color 200ms ease-in-out;
-    background: transparent;
-    outline:none;
-    padding: 0;
-    margin: 0;
-    color: white;
-    text-decoration-color: white;
-}
-
-.custom-input:focus{
-    color: white;
-    border-bottom:1px solid white;
-}
-
 .online-user-wrapper {
     flex-basis: 20%;
     border: black 3px solid;
@@ -99,10 +107,25 @@ body {
 }
 
 /* Chat wrapper */
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font: inherit;
+    color: inherit;
+}
+
+input {
+    line-height: normal;
+}
+
 button, input, select, textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+}
+
+#boxChat, #containerChat {
+    background: #eee;
+    width: 100%;
 }
 
 #containerSidebar {
@@ -113,33 +136,38 @@ button, input, select, textarea {
     flex: 0 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-#boxChat, #containerChat {
-    background: #eee;
-    width: 100%;
+    justify-content: space-between
 }
 
 #containerChat {
     height: 64px;
     padding: 4px;
     flex: 1 0 auto;
-    border-radius: 2px;
+    border-radius: 2px
 }
 
 #boxChat {
     box-sizing: border-box;
-    height: 100%;
+    height: 100%
+}
+
+#boxChatInput {
+    height: 34px
 }
 
 #boxMessages {
     height: calc(100% - 34px);
-    overflow-y: auto;
+    overflow-y: auto
 }
 
-#boxChatInput {
-    height: 34px;
+#boxMessages p {
+    padding: 3px;
+    margin: 0;
+    word-wrap: break-word
+}
+
+#boxMessages p:nth-child(even) {
+    background: #fafafa
 }
 
 .form-control {
@@ -183,7 +211,7 @@ button, input, select, textarea {
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    width: 200px;
+    width: 200px
 }
 
 #containerGamePlayers .player {
@@ -192,15 +220,58 @@ button, input, select, textarea {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: 50px;
     align-items: center;
 }
 
-#containerGamePlayers .player:first-child, .lobbySettings .lobbyName {
-    border-radius: 2px 2px 0 0;
+#containerGamePlayers .player .info {
+    flex: 1 1 auto;
+    max-width: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height: 1;
+    color: #000;
+    text-align: center
+
 }
 
-.player:nth-child(odd) {
+#containerGamePlayers .player .score {
+    flex: 1 1 auto;
+    font-size: 14px
+}
+
+#containerGamePlayers .player .name {
+    flex: 1 1 auto;
+    font-size: 13px;
+    font-weight: 700;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis
+}
+
+#containerGamePlayers .player:nth-child(even) {
+    background: #fafafa
+}
+
+#containerGamePlayers .player:nth-child(odd) {
     background: #eee;
+}
+
+#containerGamePlayers .player:last-child {
+    border-radius: 0 0 2px 2px
+}
+
+#containerGamePlayers .player:only-child {
+    border-radius: 2px
+}
+
+.avatar {
+    user-select: none;
+    position: relative;
+    flex: 0 0 auto;
+    height: 48px;
+    width: 48px;
 }
 
 /* Modal */
@@ -219,15 +290,15 @@ button, input, select, textarea {
 
 /* Modal Content/Box */
 .modal-content {
-    color: white;
-    max-width: 1000px;
+    max-width: 500px;
     min-height: 150px;
-    background-color: transparent;
+    background-color: white;
     opacity: 2;
     margin: 15% auto;
     padding: 20px;
     width: 80%;
     text-align: center;
+    border-radius: 10px;
 }
 
 .modal-title{
@@ -235,19 +306,11 @@ button, input, select, textarea {
     padding: 5px;
 }
 
-#nickname-input{
-    margin-top: 20px;
-    width: 50%;
-    text-align: center;
-    font-size: 26px;
-    border-bottom: solid 1px grey;
-    -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-    transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-    background-size: 200px 100%;
-    background: white no-repeat -200px 0;
-
-}
-
-#nickname-input:focus{
-    border-bottom: 1px solid white;
+#nickname-input {
+    position: relative;
+    width: 180px;
+    height: 28px;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: #A2A2A2;
 }
